--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -47,7 +47,7 @@
         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
         <p class="how-it-works">Our mission here at beLocal:<br> To connect you with locally sourced food.</p>
         <div align="center"><br>
-            <p>
+            <p class="text-content">
                 Start tapping into Victoria’s rich local food scene by supporting farmers and foodmakers who are dedicated to producing the highest quality products using sustainable techniques. Join the beLocal community today to start exploring the freshest locally produced food available in your neighbourhood.
             </p>
         </div>
@@ -74,19 +74,19 @@
         <div class="container">
             <!-- Example row of columns -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h2 class="numberCircle">1</h2>
                     <h2>Search</h2>
                     <p>Looking for something in particular? We make it easy to search for products, vendors and markets nearby.</p>
                     <br>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h2 class="numberCircle">2</h2>
                     <h2>Browse</h2>
                     <p>Want to know what's being sold in your area? Browse markets and vendor products from the comfort of your home.</p>
                     <br>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h2 class="numberCircle">3</h2>
                     <h2>Discover</h2>
                     <p>beLocal is designed to help you easily discover new products, markets, and vendors in your community.</p>
@@ -118,19 +118,19 @@
         <div class="container">
             <!-- Example row of columns -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h2 class="numberCircle">1</h2>
                     <h2>Manage Your Locations</h2>
                     <p>Let your customers know where you're selling, including local markets, so they know where to find you.</p>
                     <br>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h2 class="numberCircle">2</h2>
                     <h2>Update Your Inventory</h2>
                     <p>Keep customers updated! We make it easy for you keep an up-to-date list of all the items you're currently selling.</p>
                     <br>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h2 class="numberCircle">3</h2>
                     <h2>Stay Connected</h2>
                     <p>Quickly share your latest updates, selling locations, and products on your pre-existing social media accounts.</p>
