--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -34,7 +34,9 @@ hr {
 }
 
 .center {
-  text-align: center;
+  text-align: center !important;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .fa-facebook-square {
@@ -258,8 +260,13 @@ a:hover {
   }
 
   .text-content {
-  max-width: 75%;
-}
+    max-width: 75%;
+  }
+
+  .splashHeader::after{
+    left:50%;
+  }
+
 }
 
 
