--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -45,7 +45,7 @@
     <!-- ABOUT -->
     <div class="inner" id="about">
         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
-        <p class="how-it-works">Our mission here at beLocal:<br> To connect you with locally sourced food.</p>
+        <p class="how-it-works">Our mission here at beLocal:<br> Connecting local farmakers and foodmakers with the community</p>
         <div align="center"><br>
             <p class="text-content">
                 Start tapping into Victoria’s rich local food scene by supporting farmers and foodmakers who are dedicated to producing the highest quality products using sustainable techniques. Join the beLocal community today to start exploring the freshest locally produced food available in your neighbourhood.
