Fixed button string generation

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -226,8 +226,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button ng-show="signUpAsVendor" type="submit" ng-click="newVendorSubmit()" class="btn beLocal-btn-filled">Sign Up as a Farmer</button>
-                <button ng-hide="signUpAsVendor" type="submit" ng-click="newCustomerSubmit()" class="btn beLocal-btn-filled">Sign Up as a Foodie</button>                
+                <button ng-show="registerAsVendor" type="submit" ng-click="newVendorSubmit()" class="btn beLocal-btn-filled">Sign Up as a Farmer</button>
+                <button ng-hide="registerAsVendor" type="submit" ng-click="newCustomerSubmit()" class="btn beLocal-btn-filled">Sign Up as a Foodie</button>                
             </div>
         </div>
         <!-- /.modal-content -->
