--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -60,6 +60,11 @@
     }
 }
 
+.image-overlay{
+  position:relative;
+  max-width: 500px;
+}
+
 .vendor-avatar-img{
   width: 100%;
   max-width: 500px;
@@ -70,6 +75,29 @@
   margin-bottom: 5px !important;
   background-color: #696969;
 
+}
+
+#profileOverlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align:center;
+  color:rgba(255,255,255,.85);
+  background:rgba(0,0,0,.75);
+  font-family: 'Libre Baskerville', serif;
+  font-weight: bold;
+  color:rgba(255,255,255,.85);
+  font-size:24px;
+  opacity:0;
+  padding: 50% 0 0 0;
+  -webkit-transition: opacity .25s ease;
+  -moz-transition: opacity .25s ease;
+}
+
+#imageOverlay:hover #profileOverlay {
+  opacity:1;
 }
 
 @media (max-width: 450px) {
@@ -84,6 +112,10 @@
 
   .like-button-position{
     margin-top: 150px !important;
+  }
+
+  #profileOverlay{
+    font-size:18px;
   }
 }
 
