--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -11,13 +11,13 @@
 <div class="new-formatting-container customer-container" ng-class="{'is-inactive' : !isCurrentUserActive}">  
     <div class="row vendor-profile-header">
         <div class="col-sm-5 vendor-avatar">
-            <div id="vendorProfileImage" class="vendor-avatar-img pointer" data-toggle="modal" ng-click="triggerImageSelect()" style="background-image:url({{StateService.getCurrentUser().vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
-                <div ng-hide="StateService.getCurrentUser().vendor.photo.image_url != null" class="center" style="color:#ffffff;">
+            <div id="imageOverlay" class="image-overlay">
+                <div id="profileImage" class="vendor-avatar-img pointer" data-toggle="modal" ng-click="triggerImageSelect()" style="background-image:url({{StateService.getCurrentUser().vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                    <div ng-hide="StateService.getCurrentUser().vendor.photo.image_url != null" class="center" style="color:#ffffff;">
+                    </div>
                 </div>
+                <div id="profileOverlay" class="pointer" ng-click="triggerImageSelect()"><span>Change Profile Image</span></div>
             </div>
-            <button type="button" data-toggle="modal" ng-click="triggerImageSelect()" class="btn beLocal-btn-filled">
-                <span>Edit Profile Image</span>
-            </button>
         </div>
         <div class="col-sm-7 vendor-header-content">
 
@@ -406,15 +406,15 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4>Update Your Profile Image</h4><br/>
-                <small>Please select the area of the image to show on your profile and then click done.</small>
+                <h3>Crop Your Profile Image</h3><br/>
+                <h4>Please select the area of the image to show on your profile and then click done.</h4>
                 <p ng-show="profileImageError != null" class="help-block"><small style="color: #a94442;" >{{profileImageError}}</small></p>
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">  
                     <div class="row">
                         <div class="col-xs-12 col-md-12">
-                            <input style="display:none" onchange="angular.element(this).scope().handleProfileImageFileSelect(this.files)" name="imageField" type="file" id="profile-image">
+                            <input style="display:none" onchange="angular.element(this).scope().handleProfileImageFileSelect(this.files)" name="imageField" type="file" id="profile-image" accept="image/*">
                             <div class="crop-image-wrapper">
                                  <img-cropped src='{{profileImage|trusted}}' selected='selected(cords)'/>
                             </div>
