fixed responsiveness and resizing images on server side

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -406,8 +406,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h3>Crop Your Profile Image</h3><br/>
-                <h4>Please select the area of the image to show on your profile and then click done.</h4>
+                <h4>Crop Your Profile Image</h4>
+                <small>Please select the area of the image to show on your profile and then click done.</small>
                 <p ng-show="profileImageError != null" class="help-block"><small style="color: #a94442;" >{{profileImageError}}</small></p>
             </div>
             <div class="modal-body">  
