Fixed last step of tour

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -14,7 +14,9 @@
   <html-comp content="warningHTML"></html-comp>
 </div>
 
-<navbar-x-s></navbar-x-s>
+<div id="navBarTour">
+    <navbar-x-s></navbar-x-s>
+</div>
 
 <div class="new-formatting-container customer-container" ng-class="{'is-inactive' : !isCurrentUserActive}">  
     <div class="row vendor-profile-header">
