--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1122,6 +1122,10 @@ body {
     display: inline-block;
 }
 
+.progress-bar.animate {
+   width: 100%;
+}
+
 /* SELLER UI ENDS*/
 
 /* PRODUCT DETAILS UI STARTS */
