--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -447,14 +447,13 @@
 </div>
 
 <!-- Seller Add/Edit Profile Image -->
-<div class="modal fade" id="profileImageModal">
+<div class="modal fade" id="profileImageModal" data-backdrop="static" tabindex='-1'>
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4>Upload New Profile Image</h4>
-                <small>Please upload an image file less than 3 mb.</small>
-                <p ng-show="profileImageError != null" class="help-block"><small style="color: #a94442;" >{{profileImageError}}</small></p>
+                <h4 class="modal-title">Upload New Profile Image</h4>
+                <small>Please upload an image file less than 3 MB.</small>
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">
@@ -462,13 +461,14 @@
                         <div class="col-xs-12 col-md-12">
                             <div class="dotted-image-container" ng-show="showImageSelectButton">
                                 <input style="display:none" onchange="angular.element(this).scope().handleProfileImageFileSelect(this.files)" name="imageField" type="file" id="profile-image" accept="image/*">
-                                <button type="button" id="triggerImageSelect" class="btn beLocal-btn-filled btn-image-select" ng-click="triggerImageSelect()"><i class="fa fa-plus"></i>Select Image to Upload</button>
+                                <button type="button" id="triggerImageSelect" class="btn beLocal-btn-filled btn-image-select" ng-click="triggerImageSelect()">Select Image to Upload</button>
                             </div>
                             <div class="crop-image-wrapper">
                                  <img-cropped src='{{profileImage|trusted}}' selected='selected(cords)'/>
+                                  <p ng-show="profileImageError != null" class="help-block"><span style="color: #a94442;" >{{profileImageError}}</span></p>
                             </div>
                             <div ng-show="showImageCroppingText" id="imageCroppingText" style="padding:0 50px 0 50px;">
-                                <p>To make adjustments to the image, drag & resize the selected area above.<br/>
+                                <p style="text-align:center;">To make adjustments to the image, drag and resize the selected area above.
                                 Once you are happy with your image, click <b>Save Profile Image</b> below.</p>
                             </div>
                         </div>
